@@ -1,5 +1,10 @@
 2012-12-12  Andreas Kupries <andreask@activestate.com>
 
+	* library/template/collatevfs.tcl: Added missing provide command.
+
+	* library/template/templatevfs.tcl: Fixed missing default status 0 in
+	* pkgIndex.tcl.in: overriden exit command. Bumped to 1.5.5
+	
 	* pkgIndex.tcl.in: Added the various template filesystems to the
 	  index.
 
